--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
     "generate:gh-pages": "DEPLOY_ENV=GH_PAGES nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0"
+    "bootstrap": "^4.4.1",
+    "nuxt": "^2.0.0",
+    "see-on-github-vue": "^1.0.4"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-jest": "^24.1.0",
     "jest": "^24.1.0",
+    "node-sass": "^4.14.0",
+    "sass-loader": "^8.0.2",
     "vue-jest": "^4.0.0-0"
   }
 }
