--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache:
 
 branches:
   only:
-  - master
+  - nuxt
 
 install:
   - npm install
@@ -20,7 +20,7 @@ deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN # Set in travis-ci.org dashboard, marked secure https://docs.travis-ci.com/user/deployment/pages/#Setting-the-GitHub-token
-  target-branch: gh-pages
+  target-branch: master
   local-dir: dist
   on:
-    branch: master
+    branch: nuxt
