Fix Package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Sergei Iudin PHP/JS Developer CV, Resume & Portfolio",
+  "name": "yudin-s-cv",
   "version": "1.0.0",
   "description": "Sergei Iudin PHP/JS Developer CV, Resume & Portfolio",
   "author": "Sergei Iudin",
